<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.ui.FragmentUserValidation">


    <TextView
        android:id="@+id/subText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="31dp"
        android:textColor="#000000"
        android:layout_marginBottom="489dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sub_text_userValidation"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.505" />

    <TextView
        android:id="@+id/headText"
        android:layout_width="0dp"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="540dp"
        android:fontFamily="@font/poppins_bold"
        android:textSize="18dp"
        android:text="@string/head_text_userValidation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBackButton"
            android:layout_width="49dp"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/heading"
            android:fontFamily="@font/poppins_medium"
            android:layout_width="0dp"
            android:textColor="#000000"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:gravity="center"
            android:text="@string/heading_userValidation"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="346dp"
        android:layout_height="71dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="186dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="439dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnToNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:backgroundTint="#0066FF"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:letterSpacing="0.01"
            android:text="@string/btnToNumber_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnToRegistration"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:backgroundTint="#0066FF"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:letterSpacing="0.01"
            android:text="@string/btnToRegistration_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12dp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>